feat(start-game): 🏁 Start Game generating weather
